# MARKET_DB

./: .env.example  .gitignore  CONTRIBUTING.md  DEVELOPMENT_WITHOUT_SCHWAB.md  PHASE_1C_COMPLETE.md  README.md  SCHWAB_API_SETUP.md  TODO.md  main.py  pyproject.toml  quick-start.sh  render.yaml
.github/workflows/: daily_pipeline.yml
airflow/: docker-compose.yaml
airflow/dags/: calculate_indicators_dag.py  calculate_indicators_local.py  data_backfill_dag.py  data_ingestion_dag.py  data_ingestion_local.py  generate_alerts_dag.py  market_pipeline_dag.py  market_pipeline_local.py  score_opportunities_dag.py  score_opportunities_local.py
backend/: requirements-jobs.txt  requirements.txt
backend/app/: config.py  database.py  main.py
backend/jobs/: calculate_indicators.py  data_ingestion.py  generate_alerts.py  run_pipeline.py  score_opportunities.py
docs/: AIRFLOW_SETUP.md  AIRFLOW_SETUP_GUIDE.md  ANALYTICS_SERVICE.md  BACKFILL_RECOMMENDATIONS.md  BULK_IMPORT_GUIDE.md  DATA_PIPELINE.md  PHASE_1B_COMPLETE.md  PHASE_1E_COMPLETE.md  README.md  SCHWAB_API_REFERENCE.md  SETUP.md
frontend/: README.md  app.py  package.json  requirements.txt  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: __init__.py  opportunity_radar.py  (+2 more)
kubernetes/: build-jobs.sh  kind-config.yaml  secrets.yaml.template  timescaledb-statefulset.yaml
scripts/: backfill_historical_data.py  bulk_import_tickers.py  check_data_quality.py  generate_cert.ps1  generate_cert.sh  generate_stress_prices.sql  generate_stress_tickers.sql  init_db.sql  quick_auth.py  sample_tickers.csv  schwab_oauth.py  seed_data.py  seed_tickers.sql  setup_airflow.ps1  start_airflow.ps1  start_backend_https.ps1  start_backend_https.sh  stress_test.py  stress_test_fanout.sh  test_analytics.py  test_opportunity_scorer.py  test_signal_engine.py
(+30 files in other folders)
