[project]
name = "market-db"
version = "0.1.0"
description = "Personal investment intelligence platform for portfolio analytics and opportunity identification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Backend API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.26.0",

    # Data processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "ta>=0.11.0",
    "yfinance>=0.2.36",

    # Frontend (Streamlit)
    "streamlit>=1.30.0",
    "plotly>=5.18.0",

    # Authentication & OAuth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "authlib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "ruff>=0.2.0",
    "black>=24.1.0",
]
